KaaSOrchestration/Dev/API/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaas-analytics-coe-ens-api-svc
spec:
  type: ClusterIP
  ports:
  - port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: kaas-analytics-coe-ens-api
